correzione :section e container non possono essere lo stesso elemento

--- a/index.html
+++ b/index.html
@@ -73,35 +73,38 @@
 
 
 
-        <article id="jumbotrone-container" class="container m-auto py-5">
-            <div class="row justify-content-center">
+        <article id="jumbotrone-container">
 
-                <div class="col-10 col-md-8">
-                    <div id="jumbotrone-content" class="text-center">
+            <div class="container m-auto py-5">
+                <div class="row justify-content-center">
 
-                        <div class="img-container">
-                            <img src="img/avatar.svg" alt="" class="w-25">
-                        </div>
+                    <div class="col-10 col-md-8">
+                        <div id="jumbotrone-content" class="text-center">
 
-                        <h1 class="title text-uppercase pb-4">start bootstrap</h1>
+                            <div class="img-container">
+                                <img src="img/avatar.svg" alt="" class="w-25">
+                            </div>
 
-                        <div class="star-strole-container pb-4">
-                            <div class="bg-light star-stroke"></div>
-                            <i class="star-icon fa-solid fa-star"></i>
-                            <div class=" bg-light star-stroke"></div>
-                        </div>
-                        <!-- _________________________________________________________non sono riuscita a farlo funzionare, chiedi -->
-                        <!-- <div class="star-container">
+                            <h1 class="title text-uppercase pb-4">start bootstrap</h1>
+
+                            <div class="star-strole-container pb-4">
+                                <div class="bg-light star-stroke"></div>
+                                <i class="star-icon fa-solid fa-star"></i>
+                                <div class=" bg-light star-stroke"></div>
+                            </div>
+                            <!-- _________________________________________________________non sono riuscita a farlo funzionare, chiedi -->
+                            <!-- <div class="star-container">
                             <svg class="star-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
                                 <!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
-                        <!--  <path
+                            <!--  <path
                                     d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
                                     fill=" #f5f5f5"></path>
                             </svg> -->
-                        <!-- __________________________________________________________________________________________________________________________ -->
+                            <!-- __________________________________________________________________________________________________________________________ -->
 
-                        <h3 class="subtitle text-uppercase">graphic artist - web designer - illustrator</h3>
+                            <h3 class="subtitle text-uppercase">graphic artist - web designer - illustrator</h3>
 
+                        </div>
                     </div>
                 </div>
             </div>
@@ -163,115 +166,124 @@
 
 
         <div class="my-bg-primary text-light py-5">
-            <section id="about" class="container">
+            <section id="about">
+                <div class="container">
 
-                <h2 class="pb-3 title text-uppercase ">about</h2>
+                    <h2 class="pb-3 title text-uppercase ">about</h2>
 
-                <div class="star-strole-container pb-4">
-                    <div class="bg-light star-stroke"></div>
-                    <i class="star-icon fa-solid fa-star"></i>
-                    <div class="bg-light star-stroke"></div>
-                </div>
+                    <div class="star-strole-container pb-4">
+                        <div class="bg-light star-stroke"></div>
+                        <i class="star-icon fa-solid fa-star"></i>
+                        <div class="bg-light star-stroke"></div>
+                    </div>
 
-                <!-- _________________________________________________________non sono riuscita a farlo funzionare, chiedi -->
+                    <!-- _________________________________________________________non sono riuscita a farlo funzionare, chiedi -->
 
-                <!--    div class="star-container">
+                    <!--    div class="star-container">
                     <img src="img/star-solid.svg" alt="" class="star-icon">
                 </div> -->
-                <!-- ____________________________________________________________________________________________________________________ -->
+                    <!-- ____________________________________________________________________________________________________________________ -->
 
-                <div class=" row justify-content-center text-start">
+                    <div class=" row justify-content-center text-start">
 
-                    <div class="col-8 col-md-10 col-lg-12">
-                        <div class="row row-cols-md-2 ">
+                        <div class="col-8 col-md-10 col-lg-12">
+                            <div class="row row-cols-md-2 ">
 
-                            <div class="col-12">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ex quibusdam obcaecati
-                                    illum
-                                    explicabo ut optio repellat. Hic voluptates rerum amet molestiae ut molestias, dicta
-                                    tempore
-                                    porro aperiam quos fugit!
+                                <div class="col-12">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ex quibusdam
+                                        obcaecati
+                                        illum
+                                        explicabo ut optio repellat. Hic voluptates rerum amet molestiae ut molestias,
+                                        dicta
+                                        tempore
+                                        porro aperiam quos fugit!
 
-                                </p>
-                            </div>
-                            <div class="col-12">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ex quibusdam obcaecati
-                                    illum
-                                    explicabo ut optio repellat. Hic voluptates rerum amet molestiae ut molestias, dicta
-                                    tempore
-                                    porro aperiam quos fugit!
+                                    </p>
+                                </div>
+                                <div class="col-12">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ex quibusdam
+                                        obcaecati
+                                        illum
+                                        explicabo ut optio repellat. Hic voluptates rerum amet molestiae ut molestias,
+                                        dicta
+                                        tempore
+                                        porro aperiam quos fugit!
 
-                                </p>
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
 
-                <div>
-                    <button class="btn btn-outline-light text-capitalize mt-2">
-                        <i class="fa-solid fa-download"></i> download
-                    </button>
+                    <div>
+                        <button class="btn btn-outline-light text-capitalize mt-2">
+                            <i class="fa-solid fa-download"></i> download
+                        </button>
+                    </div>
                 </div>
             </section>
         </div>
 
 
-        <section id="contact" class="container pt-5">
+        <section id="contact">
+            <div class="container pt-5">
 
-            <h2 class="pb-3 title text-uppercase ">contact</h2>
-            <div class="star-stroke-container">
+                <h2 class="pb-3 title text-uppercase ">contact</h2>
+                <div class="star-stroke-container">
 
-                <div class="star-stroke"></div>
-                <i class="star-icon fa-solid fa-star"></i>
-                <div class="star-stroke"></div>
+                    <div class="star-stroke"></div>
+                    <i class="star-icon fa-solid fa-star"></i>
+                    <div class="star-stroke"></div>
 
-            </div>
+                </div>
 
 
-            <!-- _________________________________________________________non sono riuscita a farlo funzionare, chiedi -->
-            <!--   <div class="star-container">
+                <!-- _________________________________________________________non sono riuscita a farlo funzionare, chiedi -->
+                <!--   <div class="star-container">
                 <i class=" star-icon fa-solid fa-star"></i>
             </div> -->
-            <!-- ___________________________________________________________________________________________________________________________ -->
+                <!-- ___________________________________________________________________________________________________________________________ -->
 
 
-            <div class=" row justify-content-center text-start">
+                <div class=" row justify-content-center text-start">
 
-                <div class="col-8 col-lg-10">
-
-
-                    <form action="#" method="get" class="row ">
-
-                        <div class=" form-floating col-11 col-md-11 col-lg-12 offset-1 offset-lg-0 ">
-                            <input type="text" class="form-control my-form-control" id="user-name" placeholder="name">
-                            <label for="user-name">name </label>
-                        </div>
-
-                        <div class=" form-floating col-11 col-md-11 col-lg-12 offset-1 offset-lg-0 ">
-                            <input type="email" class="form-control my-form-control" id="user-email"
-                                placeholder="Email address">
-                            <label for="user-email">Email address</label>
-                        </div>
+                    <div class="col-8 col-lg-10">
 
 
-                        <div class=" form-floating col-11 col-md-11 col-lg-12 offset-1 offset-lg-0">
-                            <input type="number" class="form-control my-form-control" id="user-number"
-                                placeholder="phone number">
-                            <label for="user-number">phone number</label>
-                        </div>
+                        <form action="#" method="get" class="row ">
+
+                            <div class=" form-floating col-11 col-md-11 col-lg-12 offset-1 offset-lg-0 ">
+                                <input type="text" class="form-control my-form-control" id="user-name"
+                                    placeholder="name">
+                                <label for="user-name">name </label>
+                            </div>
+
+                            <div class=" form-floating col-11 col-md-11 col-lg-12 offset-1 offset-lg-0 ">
+                                <input type="email" class="form-control my-form-control" id="user-email"
+                                    placeholder="Email address">
+                                <label for="user-email">Email address</label>
+                            </div>
+
+
+                            <div class=" form-floating col-11 col-md-11 col-lg-12 offset-1 offset-lg-0">
+                                <input type="number" class="form-control my-form-control" id="user-number"
+                                    placeholder="phone number">
+                                <label for="user-number">phone number</label>
+                            </div>
 
 
 
 
-                        <div class="form-floating col-11 col-md-11 col-lg-12 offset-1 offset-lg-0 ">
-                            <textarea class="form-control my-form-control" placeholder="message"
-                                id="Textarea"></textarea>
-                            <label for="Textarea">Comments</label>
-                        </div>
+                            <div class="form-floating col-11 col-md-11 col-lg-12 offset-1 offset-lg-0 ">
+                                <textarea class="form-control my-form-control" placeholder="message"
+                                    id="Textarea"></textarea>
+                                <label for="Textarea">Comments</label>
+                            </div>
 
 
-                        <button class="btn btn-success my-bg-primary border-0 my-2 col-1"> send </button>
-                    </form>
+                            <button class="btn btn-success my-bg-primary border-0 my-2 col-1"> send </button>
+                        </form>
+                    </div>
                 </div>
         </section>
     </main>
