--- a/index.html
+++ b/index.html
@@ -124,39 +124,39 @@
 
 
         <section id="portfolio" class="container pb-5">
-            <div class="row row-cols-12 row-cols-md-2 row-cols-lg-3">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-2 g-md-3">
 
-                <div class=" col-12">
+                <div class=" col">
                     <div class="card">
                         <img class="img-fluid card-img" src="img/cabin.png" alt="">
                     </div>
                 </div>
 
-                <div class=" col-12 ">
+                <div class=" col ">
                     <div class="card">
                         <img class="img-fluid card-img" src="img/cake.png" alt="">
                     </div>
                 </div>
 
-                <div class=" col-12 ">
+                <div class=" col ">
                     <div class="card">
                         <img class="img-fluid card-img" src="img/circus.png" alt="">
                     </div>
                 </div>
 
-                <div class=" col-12 ">
+                <div class=" col ">
                     <div class="card">
                         <img class="img-fluid card-img" src="img/game.png" alt="">
                     </div>
                 </div>
 
-                <div class=" col-12 ">
+                <div class=" col ">
                     <div class="card">
                         <img class="img-fluid card-img" src="img/safe.png" alt="">
                     </div>
                 </div>
 
-                <div class=" col-12">
+                <div class=" col">
                     <div class="card">
                         <img class="img-fluid card-img" src="img/submarine.png" alt="">
                     </div>
